--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "14.2.3",
     "nodemailer": "^6.9.13",
     "react": "^18",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18",
     "react-firebase-hooks": "^5.1.1"
   },
@@ -21,6 +22,7 @@
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.15",
     "@types/react": "^18",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18",
     "daisyui": "^4.11.1",
     "postcss": "^8",
